[package]
name = "halo2_merkle_tree_ipa_bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "halo2_mt"
path = "src/lib.rs"

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]

[dependencies]
ff = { version = "0.13", features = ["bits"] }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_04_20"}
halo2_gadgets = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_04_20"}
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', branch = "main" }
plotters = { version = "0.3.0", optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }
criterion = "0.5.1"
rand = "0.8.5"
rand_core = "0.6.4"


[[bench]]
#name = "poseidon"
name = "merkle"
harness = false
